--- a/.github/workflows/psql-ruby.yml
+++ b/.github/workflows/psql-ruby.yml
@@ -35,10 +35,7 @@ jobs:
           sudo bash -c "echo deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main >> /etc/apt/sources.list.d/pgdg.list"
           wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
-          sudo apt-get -yq install libpq-dev postgresql-client-12 postgresql-12-postgis-3 postgresql-12-postgis-3-scripts
+          sudo apt-get -yq install libpq-dev postgresql-client-12
       - name: Check installed components for PostgreSQL
         run: |
-          sudo apt-get update
-          sudo apt-get install aptitude
-          find /usr -name postgis.control
-          aptitude search postgis
+          pg_isready
