--- a/.github/workflows/psql-ruby.yml
+++ b/.github/workflows/psql-ruby.yml
@@ -1,41 +1,41 @@
-name: Postgres Client + Ruby
+# name: Postgres Client + Ruby
 
-on:
-  push:
+# on:
+#   push:
 
-jobs:
-  test:
-    name: Postgres Client + Ruby
-    runs-on: ubuntu-latest
-    services:
-      postgres:
+# jobs:
+#   test:
+#     name: Postgres Client + Ruby
+#     runs-on: ubuntu-latest
+#     services:
+#       postgres:
 
-        image: postgres:12
-        ports: 
-          - 5432/tcp
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: culturinthecity_test
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+#         image: postgres:12
+#         ports: 
+#           - 5432/tcp
+#         env:
+#           POSTGRES_USER: postgres
+#           POSTGRES_PASSWORD: postgres
+#           POSTGRES_DB: culturinthecity_test
+#         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v1
 
-      - name: Setup Ruby
-        uses: eregon/use-ruby-action@v1
-        with:
-          ruby-version: 2.6.5
+#       - name: Setup Ruby
+#         uses: eregon/use-ruby-action@v1
+#         with:
+#           ruby-version: 2.6.5
 
-      - name: Print Ruby version
-        run: ruby -v
+#       - name: Print Ruby version
+#         run: ruby -v
 
-      - name: Install PostgreSQL 12 client required for loading structure.sql
-        run: |
-          sudo bash -c "echo deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main >> /etc/apt/sources.list.d/pgdg.list"
-          wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
-          sudo apt-get update
-          sudo apt-get -y install libpq-dev postgresql-12 postgresql-client-12
-      - name: Check installed components for PostgreSQL
-        run: |
-          pg_isready
+#       - name: Install PostgreSQL 12 client required for loading structure.sql
+#         run: |
+#           sudo bash -c "echo deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main >> /etc/apt/sources.list.d/pgdg.list"
+#           wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
+#           sudo apt-get update
+#           sudo apt-get -y install libpq-dev postgresql-12 postgresql-client-12
+#       - name: Check installed components for PostgreSQL
+#         run: |
+#           pg_isready
