--- a/.github/workflows/psql-python.yml
+++ b/.github/workflows/psql-python.yml
@@ -34,12 +34,13 @@ jobs:
         env:
           # use localhost for the host here because we are running the job on the VM.
           # If we were running the job on in a container this would be postgres
-          POSTGRES_HOST: localhost
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }} # get randomly assigned published port
+          PGHOST: localhost
+          PGUSER: postgres
+          PGPASSWORD: postgres
+          PGPORT: ${{ job.services.postgres.ports[5432] }} # get randomly assigned published port
+          PGDATABASE: postgres
         run: |
           pg_isready
           cd sql/
-          export POSTGRES_PASSWORD="postgres"
-          psql --host=localhost --dbname=postgres --username=postgres
-          psql -U postgres -d postgres < sample-table.sql
+          psql
+          psql < sample-table.sql
